--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cyrillic-to-translit-js": "^3.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
     "svelte-spa-router": "^3.1.0",
     "uuid": "^8.3.2"
   },
@@ -34,7 +35,6 @@
     "jest-in-case": "1.0.2",
     "livereload": "0.8.0",
     "node-notifier": "7.0.2",
-    "node-sass": "4.12.0",
     "postcss": "7.0.17",
     "rimraf": "3.0.2",
     "rollup": "2.23.0",
